--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=320" />
 
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" /> 
 <title>petpet &middot; Made with Sencha Animator</title>
 
 
