intro page/ add status bar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width=320" />
-
+<meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" /> 
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <title>petpet &middot; Made with Sencha Animator</title>
 
 
@@ -20,54 +19,103 @@
 <body style="margin:0; height: 100%;">
 <div id="kitty-an-anim"><ol>
 
-<li id="kitty-an-scene-4" >
+<li id="kitty-an-scene-16" >
 <div class="kitty-an-stage">
     <div id="kitty-an-obj-1"><div><img  height="104" width="167"  src="assets/head2.png"></div>
         <div id="kitty-an-obj-2"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
     </div>
-    <div id="kitty-an-obj-3"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-4"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-3"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-4"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-5"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-6"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-7"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-8"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-9"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
+    <div id="kitty-an-obj-10"><span>START PETTING!</span></div>
+</div>
+</li>
+
+<li id="kitty-an-scene-13" >
+<div class="kitty-an-stage">
+    <div id="kitty-an-obj-11"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-12"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-13"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-14"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-15"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-16"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-17"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-18"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-19"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
+    <div id="kitty-an-obj-20"><span>START PETTING!</span></div>
+</div>
+</li>
+
+<li id="kitty-an-scene-14" >
+<div class="kitty-an-stage">
+    <div id="kitty-an-obj-21"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-22"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+        <div id="kitty-an-obj-23"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+        <div id="kitty-an-obj-24"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-25"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
+</div>
+</li>
+
+<li id="kitty-an-scene-4" >
+<div class="kitty-an-stage">
+    <div id="kitty-an-obj-26"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-27"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    </div>
+    <div id="kitty-an-obj-28"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-29"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
 </div>
 </li>
 
 <li id="kitty-an-scene-6" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-5"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
-    <div id="kitty-an-obj-6"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
-    <div id="kitty-an-obj-7"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-8"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-9"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-10"><div><img  height="9" width="76"  src="assets/eyes_sleepy.png"></div></div>
+    <div id="kitty-an-obj-30"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
+    <div id="kitty-an-obj-31"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
+    <div id="kitty-an-obj-32"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-33"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-34"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-35"><div><img  height="9" width="76"  src="assets/eyes_sleepy.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-1" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-11"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-12"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-13"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-14"><div><img  height="9" width="76"  src="assets/eyes_happy.png"></div></div>
+    <div id="kitty-an-obj-36"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-37"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-38"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-39"><div><img  height="9" width="76"  src="assets/eyes_happy.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-7" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-15"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-16"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-17"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-18"><div><img  height="16" width="87"  src="assets/eyes_cant.png"></div></div>
+    <div id="kitty-an-obj-40"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-41"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-42"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-43"><div><img  height="16" width="87"  src="assets/eyes_cant.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-8" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-19"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-20"><div><img  height="140" width="124"  src="assets/body3.png"></div></div>
-    <div id="kitty-an-obj-21"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-22"><div><img  height="9" width="76"  src="assets/eyes_dead.png"></div></div>
+    <div id="kitty-an-obj-44"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-45"><div><img  height="140" width="124"  src="assets/body3.png"></div></div>
+    <div id="kitty-an-obj-46"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-47"><div><img  height="9" width="76"  src="assets/eyes_dead.png"></div></div>
     </div>
 </div>
 </li>
