added apple icons

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <!-- Sencha Animator Version: 1.5 Build: 219 -->
 <head>
 <meta charset="UTF-8">
-
+<!-- This is for my ios sizing -->
 <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>petpet &middot; Made with Sencha Animator</title>
+<!-- This is for my ios icons -->
+<link href="assets/icons/120.png" rel="apple-touch-icon" />
+<link href="assets/icons/72.png" rel="apple-touch-icon" sizes="72x72" />
+<link href="assets/icons/120.png" rel="apple-touch-icon" sizes="120x120" />
+<link href="assets/icons/144.png" rel="apple-touch-icon" sizes="144x144" />
+
+<title>KITTY</title>
 
 
 <script type="text/javascript" src="controller.js"></script>
