--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height:100%;">
+<html style="height:100%;" manifest="kitty.0.2.manifest">
 <!-- Sencha Animator Version: 1.5 Build: 219 -->
 <head>
 <meta charset="UTF-8">
@@ -13,6 +13,12 @@
 <link href="assets/icons/72.png" rel="apple-touch-icon" sizes="72x72" />
 <link href="assets/icons/120.png" rel="apple-touch-icon" sizes="120x120" />
 <link href="assets/icons/144.png" rel="apple-touch-icon" sizes="144x144" />
+
+<!-- This is for scrollbanding -->
+<script type="text/javascript" charset="utf-8">
+    document.ontouchmove = function(e){ e.preventDefault(); }
+</script>
+
 <title>KITTY</title>
 
 
@@ -44,87 +50,68 @@
 </div>
 </li>
 
-<li id="kitty-an-scene-13" >
-<div class="kitty-an-stage">
-    <div id="kitty-an-obj-11"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-12"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
-    </div>
-    <div id="kitty-an-obj-13"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-14"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
-    </div>
-    <div id="kitty-an-obj-15"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-16"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
-    </div>
-    <div id="kitty-an-obj-17"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-18"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
-    </div>
-    <div id="kitty-an-obj-19"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
-    <div id="kitty-an-obj-20"><span>START PETTING!</span></div>
-</div>
-</li>
-
 <li id="kitty-an-scene-14" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-21"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-22"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-        <div id="kitty-an-obj-23"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-        <div id="kitty-an-obj-24"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    <div id="kitty-an-obj-11"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-12"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+        <div id="kitty-an-obj-13"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+        <div id="kitty-an-obj-14"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
     </div>
-    <div id="kitty-an-obj-25"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
-    <div id="kitty-an-obj-26"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
-    <div id="kitty-an-obj-27"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
-    <div id="kitty-an-obj-28"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
+    <div id="kitty-an-obj-15"><div><img  height="214" width="390"  src="assets/kittybub.png"></div></div>
+    <div id="kitty-an-obj-16"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
+    <div id="kitty-an-obj-17"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
+    <div id="kitty-an-obj-18"><div><img  height="52" width="42"  src="assets/arrow.png"></div></div>
 </div>
 </li>
 
 <li id="kitty-an-scene-4" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-29"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-30"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
+    <div id="kitty-an-obj-19"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-20"><div><img  height="14" width="66"  src="assets/eyes.png"></div></div>
     </div>
-    <div id="kitty-an-obj-31"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-32"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-21"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-22"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
 </div>
 </li>
 
 <li id="kitty-an-scene-6" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-33"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
-    <div id="kitty-an-obj-34"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
-    <div id="kitty-an-obj-35"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-36"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-37"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-38"><div><img  height="9" width="76"  src="assets/eyes_sleepy.png"></div></div>
+    <div id="kitty-an-obj-23"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
+    <div id="kitty-an-obj-24"><div><img  height="9" width="14"  src="assets/z.png"></div></div>
+    <div id="kitty-an-obj-25"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-26"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-27"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-28"><div><img  height="9" width="76"  src="assets/eyes_sleepy.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-1" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-39"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-40"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-41"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-42"><div><img  height="9" width="76"  src="assets/eyes_happy.png"></div></div>
+    <div id="kitty-an-obj-29"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-30"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-31"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-32"><div><img  height="9" width="76"  src="assets/eyes_happy.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-7" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-43"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-44"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
-    <div id="kitty-an-obj-45"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-46"><div><img  height="16" width="87"  src="assets/eyes_cant.png"></div></div>
+    <div id="kitty-an-obj-33"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-34"><div><img  height="102" width="124"  src="assets/body2.png"></div></div>
+    <div id="kitty-an-obj-35"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-36"><div><img  height="16" width="87"  src="assets/eyes_cant.png"></div></div>
     </div>
 </div>
 </li>
 
 <li id="kitty-an-scene-8" >
 <div class="kitty-an-stage">
-    <div id="kitty-an-obj-47"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
-    <div id="kitty-an-obj-48"><div><img  height="140" width="124"  src="assets/body3.png"></div></div>
-    <div id="kitty-an-obj-49"><div><img  height="104" width="167"  src="assets/head2.png"></div>
-        <div id="kitty-an-obj-50"><div><img  height="9" width="76"  src="assets/eyes_dead.png"></div></div>
+    <div id="kitty-an-obj-37"><div><img  height="101" width="31"  src="assets/tail2.png"></div></div>
+    <div id="kitty-an-obj-38"><div><img  height="140" width="124"  src="assets/body3.png"></div></div>
+    <div id="kitty-an-obj-39"><div><img  height="104" width="167"  src="assets/head2.png"></div>
+        <div id="kitty-an-obj-40"><div><img  height="9" width="76"  src="assets/eyes_dead.png"></div></div>
     </div>
 </div>
 </li>
