--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 
 <!-- This is for my ios sizing -->
-<meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <!-- This is for my ios icons -->
